fix: 위협 조회 mapper 수정